--- a/_config.yml
+++ b/_config.yml
@@ -98,8 +98,7 @@ facebook_id: # your facebook id
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
-contact_note: >
-The best way to reach me is through email or LinkedIn.
+contact_note: The best way to reach me is through email or LinkedIn.
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
 # -----------------------------------------------------------------------------
