--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -17,13 +17,14 @@
           valued neural network demodulation technique in Python using PyTorch that outperforms conventional de-
           modulation techniques such as matched filtering.
         - Improving existing electromagnetic wave propagation models by applying regularized regression-based error
-          correction to the models considering channel and propagation characteristics in Python (PyTorch) and MAT-
-          LAB. Includes feature design & engineering and a multilayer regression model. The proposed model enables
+          correction to the models considering channel and propagation characteristics in Python (PyTorch) and MATLAB.
+          Includes feature design & engineering and a multilayer regression model. The proposed model enables
           a 58% to 87% reduction in loss difference (error) variance.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
+        - Designing digital spectrum twins for tracking historical and current usage of radio spectrum and predicting
+          future patterns and usage. Designing aggregation rules to combine received signal strength, variance, duty
+          cycle, and confidence values for various radio users in a region of interest using georeferenced maps. Utilized
+          GIS, OSM, Python, and MATLAB.
+
     - title: Federal teaching diploma
       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
       year: 1900
