--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -5,7 +5,8 @@
       value: Serhat Tadik
     - name: Languages
       value: English, Turkish
-
+    - name: Frameworks & Tools
+      value: Python (PyTorch, PyG, Tensorflow, Streamlit), SQL, AWS (Sagemaker, Lambda), MATLAB, Julia, Git, C, C++, GIS
 - title: Education
   type: time_table
   contents:
