--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -8,7 +8,7 @@
     - name: Frameworks & Tools
       value: Python (PyTorch, PyG, Tensorflow, Streamlit), SQL, AWS (Sagemaker, Lambda), MATLAB, Julia, Git, C, C++, GIS
     - name: publications
-      value: /publications/
+      value: b
 - title: Education
   type: time_table
   contents:
