Revert "update cv"
This reverts commit 7d9875cc736a1884db65be59082f3de93f9a493b.

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -8,7 +8,7 @@
     - name: Frameworks & Tools
       value: Python (PyTorch, PyG, Tensorflow, Streamlit), SQL, AWS (Sagemaker, Lambda), MATLAB, Julia, Git, C, C++, GIS
     - name: publications
-      value: b
+      value: /publications/
 - title: Education
   type: time_table
   contents:
