--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,6 +16,14 @@
       institution: Georgia Institute of Technology, USA
       year: 2023-Present
       description:
+        - Developed a method to quantify and visualize what is known about spectrum occupancy in a region from
+          spectrum monitoring data recorded at a few fixed locations. The average observed signal strengths at the
+          monitors are extrapolated throughout the region through likelihood estimation of transmitter location(s)
+          and a simple log-distance path loss model. New georeferenced spectrum occupancy visualizations
+          that combine estimates of occupancy power with duty cycle, and of signal variation with confidence
+          level are introduced offering insights into planning for future allocations, interference, and broadcast
+          coverage analysis. The spectrum consumption trends over different times of day and seasons are analyzed and
+          interpreted.
         - Took part in the implementation of an ambient scatter communications system. Worked on a complex-
           valued neural network demodulation technique in Python using PyTorch that outperforms conventional de-
           modulation techniques such as matched filtering.
@@ -32,10 +40,10 @@
       institution: Bogazici University, Turkey
       year: 2016-2022
       description:
-        - Done undergraduate thesis on "A Comparison Between GNN Architectures and Implementation on Brain Connectomes".
+        - Submitted undergraduate thesis on "A Comparison Between GNN Architectures and Implementation on Brain Connectomes".
           Used Python/PyTorch and Julia for node classification on a citation network and graph classification on brain
           connectomes structured as graphs. Showed that graph isomorphism networks (GIN) outperform graph convolutional
-          networks (GCN) in graph classification tasks thanks to their isomorphic neighbor aggregation and graph readout
+          networks (GCN) in the graph classification task thanks to their isomorphic neighbor aggregation and graph readout
           operations.
         - Description 2.
 
@@ -46,7 +54,15 @@
       institution: Cognosos Inc., USA
       year: 2024-Present
       description:
-        - Description 1.
+        - Working on indoor zone classification using various machine learning techniques including
+          ANN, CNN and pre-ML techniques such as XGBoost. Analyzed the sources of misclassification, developed
+          a hierarchical model combining an ANN with a One-vs-One classifier that helped improve accuracy by 1%
+          overall. Brought to attention that the models in use not only provide a single prediction, rather
+          multiple predictions with associated probabilities. Illustrated that the models' first two predictions
+          provide an accuracy greater than 99% that has the potential to improve customer satisfaction. Trained and
+          deployed the aforementioned models developed through PyTorch in AWS using Sagemaker and Lambda.
+        - Suggested and implemented various voting algorithms that combine multiple models' predictions for a more
+          stable and accurate prediction. Showed that
         - Description 2.
         - title: Description 3.
           contents:
