--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -86,18 +86,6 @@
           decomposition along with the known transactions resulted in customer transaction prediction with an accuracy of 90%.
           This work has been accepted for publication in IEEE Signal Processing and Communications Applications Conference and
           is available online.
-    - title:
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
 
 - title: Open Source Projects
   type: time_table
@@ -109,27 +97,19 @@
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2016
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+        - Ranked 36th among 2,000,000 candidates in the university entrance exam, LYS, in Turkey.
 
-- title: Academic Interests
+- title: Professional Focus Areas
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Digital Signal Processing / Machine Learning
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Deep learning architectures and techniques for general prediction problems.
+        - Wireless signal processing and analysis
+    - title: Spectrum Sharing and Allocation
       items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - For a given bounded geographic region, frequency band, and time interval, optimal allocation
+          of spectrum resources that maximizes spectrum usage, and total utility, and minimizes the overall cost
+          among various types of spectrum users.
