--- a/_config.yml
+++ b/_config.yml
@@ -166,6 +166,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  reviews:
+    output: true
+    permalink: /reviews/:path/
 
 news_scrollable: true # adds a vertical scroll bar if there are more than 3 news items
 news_limit: 5 # leave blank to include all the news in the `_news` folder
