--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -97,6 +97,9 @@
 - title: Honors and Awards
   type: time_table
   contents:
+    - year: 2022
+      items:
+        - Graduated with high honors from the Electrical Engineering and Physics Departments at Boğaziçi University.
     - year: 2016
       items:
         - Ranked 36th among 2,000,000 candidates in the university entrance exam, LYS, in Turkey.
