--- a/_config.yml
+++ b/_config.yml
@@ -246,9 +246,9 @@ jekyll-archives:
   permalinks:
     year: '/blog/:year/'
     tag: '/blog/tag/:name/'
-    category: '/blog/category/:name/'
+    category: '/blog/random/:name/'
 
-display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will be dispalyed on the front page of your blog
+display_tags: [Radiation Patterns', 'Python'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
